--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,5 @@
         "wkhtmltoimage"
     ],
     "homepage": "http://github.com/vastpromedia/wkhtmltopdf",
-    "license": "LGPL-3.0+",
-    "bin": [
-        "wkhtmltoimage",
-        "wkhtmltopdf"
-    ]
+    "license": "LGPL-3.0+"
 }
